[gd_scene load_steps=3 format=3 uid="uid://dxmodn8mbvw0i"]

[ext_resource type="Script" path="res://behaviours/hunt_target.gd" id="1_1ex7u"]
[ext_resource type="PackedScene" uid="uid://ctpn4hvkhxoi3" path="res://behaviours/hunter.tscn" id="2_vjdtc"]

[node name="HuntTarget" type="Node2D"]
script = ExtResource("1_1ex7u")
tag = null
give_up_secs = null

[node name="Hunter" parent="." instance=ExtResource("2_vjdtc")]

[node name="GiveUpTimer" type="Timer" parent="."]

[connection signal="target_abandoned" from="." to="." method="_on_target_abandoned"]
[connection signal="target_selected" from="." to="." method="_on_target_selected"]
[connection signal="tracked" from="Hunter" to="." method="_on_hunter_tracked"]
[connection signal="untracked" from="Hunter" to="." method="_on_hunter_untracked"]
[connection signal="timeout" from="GiveUpTimer" to="." method="_on_give_up_timer_timeout"]
